# http-cache

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  custom.css  index.html  justfile  oranda.json  rustfmt.toml
.assets/styles/: oranda.css
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: coverage.yml  http-cache-darkbird.yml  http-cache-mokadeser.yml  http-cache-quickcache.yml  http-cache-reqwest.yml  http-cache-surf.yml  http-cache-tower.yml  http-cache-ureq.yml  http-cache.yml  msrv.yml  oranda.yml  rust.yml
book/: 404.html  cache-modes.html  index.html  introduction.html  print.html  rate-limiting.html  searchindex.js  searchindex.json
book/clients/: clients.html  reqwest.html  surf.html  tower.html  ureq.html
book/development/: development.html  supporting-a-backend-cache-manager.html  supporting-an-http-client.html
book/managers/: cacache.html  foyer.html  managers.html  moka.html  quick-cache.html  streaming_cache.html
book/server/: server.html  tower-server.html
compat-tests/: README.md
compat-tests/legacy-writer/: Cargo.toml
compat-tests/legacy-writer/src/: main.rs
compat-tests/read-legacy-cache/: Cargo.toml
compat-tests/read-legacy-cache/src/: main.rs
docs/: book.toml
docs/src/: SUMMARY.md  cache-modes.md  introduction.md  rate-limiting.md
docs/src/clients/: clients.md  reqwest.md  surf.md  tower.md  ureq.md
docs/src/development/: development.md  supporting-a-backend-cache-manager.md  supporting-an-http-client.md
docs/src/managers/: cacache.md  foyer.md  managers.md  moka.md  quick-cache.md  streaming_cache.md
docs/src/server/: server.md  tower-server.md
funding/: index.html
http-cache/: CHANGELOG.md  Cargo.toml  README.md
http-cache-darkbird/: CHANGELOG.md  Cargo.toml  README.md
http-cache-darkbird/src/: error.rs  lib.rs  test.rs
http-cache-manager-cacache/: Cargo.toml
http-cache-manager-cacache/src/: lib.rs
http-cache-middleware-reqwest/: Cargo.toml
http-cache-middleware-reqwest/src/: lib.rs
http-cache-middleware-surf/: Cargo.toml
http-cache-middleware-surf/src/: lib.rs
http-cache-mokadeser/: CHANGELOG.md  Cargo.toml  README.md
http-cache-mokadeser/src/: lib.rs  test.rs
http-cache-quickcache/: CHANGELOG.md  Cargo.toml  README.md
http-cache-quickcache/CHANGELOG/: index.html
http-cache-quickcache/README/: index.html
http-cache-quickcache/src/: lib.rs  test.rs
http-cache-reqwest/: CHANGELOG.md  Cargo.toml  README.md
http-cache-reqwest/CHANGELOG/: index.html
http-cache-reqwest/README/: index.html
http-cache-reqwest/examples/: reqwest_basic.rs  reqwest_streaming.rs  reqwest_streaming_memory_profile.rs  streaming_memory_profile.rs
http-cache-reqwest/src/: error.rs  lib.rs  test.rs
http-cache-surf/: CHANGELOG.md  Cargo.toml  README.md
http-cache-surf/CHANGELOG/: index.html
http-cache-surf/README/: index.html
http-cache-surf/examples/: streaming_memory_profile.rs  surf_basic.rs
http-cache-surf/src/: error.rs  lib.rs  test.rs
http-cache-tests/: Cargo.toml
http-cache-tests/src/: client_reqwest.rs  client_surf.rs  lib.rs  manager_darkbird.rs  manager_quickcache.rs
http-cache-tower/: CHANGELOG.md  Cargo.toml  README.md
http-cache-tower-server/: CHANGELOG.md  Cargo.toml  README.md
http-cache-tower-server/examples/: axum_advanced.rs  axum_basic.rs
http-cache-tower-server/src/: lib.rs
http-cache-tower-server/tests/: integration.rs
http-cache-tower/benches/: streaming_benchmark.rs
http-cache-tower/examples/: hyper_basic.rs  hyper_streaming.rs  streaming_memory_profile.rs  tower_streaming_memory_profile.rs
http-cache-tower/src/: error.rs  lib.rs  test.rs
http-cache-types/: Cargo.toml
http-cache-types/src/: error.rs  lib.rs
http-cache-ureq/: CHANGELOG.md  Cargo.toml  README.md
http-cache-ureq/examples/: ureq_basic.rs
http-cache-ureq/src/: error.rs  lib.rs  test.rs
http-cache/CHANGELOG/: index.html
http-cache/src/: body.rs  error.rs  lib.rs  rate_limiting.rs  runtime.rs  test.rs
http-cache/src/managers/: cacache.rs  foyer.rs  mod.rs  moka.rs  streaming_cache.rs
src/: error.rs  lib.rs
src/managers/: cacache.rs  mod.rs
src/middleware/: mod.rs  reqwest.rs  surf.rs
tests/: surf.rs
