[package]
name = "http-cache"
version = "0.1.0"
description = "An HTTP caching middleware"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = { version = "1.3", optional = true }
cacache = { version = "9.0", optional = true }
http = "0.2"
httpdate = "1.0"
http-cache-semantics = "0.9"
http-types = { version = "2.12", optional = true }
miette = "3.3"
reqwest = { version = "0.11", default-features = false, optional = true }
reqwest-middleware = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
surf = { version = "2.3", optional = true }
task-local-extensions = { version = "0.1", optional = true }
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
async-std = { version = "1.10", features = ["attributes"]}
http-cache-semantics = { version = "0.9", features = ["reqwest"]}
reqwest = "0.11"
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
mockito = "0.30"

[features]
default = ["manager-cacache"]
fancy-errors = ["miette/fancy"]
manager-cacache = ["cacache", "bincode"]
client-reqwest = ["reqwest", "reqwest-middleware", "task-local-extensions"]
client-surf = ["surf", "http-types"]
