[package]
name = "http-cache-darkbird"
version = "0.1.4"
description = "http-cache manager implementation for darkbird"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "darkbird"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.67.1"

[dependencies]
async-trait = "0.1.72"
darkbird = "6.1.8"
http-cache-semantics = "1.0.1"
serde = { version = "1.0.178", features = ["derive"] }
thiserror = "1.0.44"

[dependencies.http-cache]
path = "../http-cache"
version = "0.17.0"
default-features = false

[dev-dependencies]
http = "1.0.0"
reqwest = { version = "0.11.18", default-features = false }
reqwest-middleware = "0.2.2"
tokio = { version = "1.29.1", features = [ "macros", "rt", "rt-multi-thread" ] }
wiremock = "0.5.19"
url = { version = "2.4.0", features = ["serde"] }

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
