[package]
name = "http-cache-darkbird"
version = "0.3.1"
description = "http-cache manager implementation for darkbird"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "darkbird"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
async-trait = "0.1.85"
darkbird = "6.2.4"
http-cache-semantics = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"

[dependencies.http-cache]
path = "../http-cache"
version = "0.20.1"
default-features = false

[dev-dependencies]
http = "1.2.0"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.4.0"
tokio = { version = "1.43.0", features = [ "macros", "rt", "rt-multi-thread" ] }
wiremock = "0.6.2"
url = { version = "2.5.4", features = ["serde"] }

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
