[package]
name = "http-cache-mokadeser"
version = "0.1.0"
description = "http-cache manager implementation for moka stored deserialized"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "moka"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.66.1"

[dependencies]
async-trait = "0.1.72"
http-cache-semantics = "1.0.1"
url = { version = "2.4.0", features = ["serde"] }
moka = { version = "0.12.0", features = ["future"]}

[dependencies.http-cache]
path = "../http-cache"
version = "0.15.0"
default-features = false
features = ["bincode"]

[dev-dependencies]
http = "0.2.9"
reqwest = { version = "0.11.18", default-features = false }
reqwest-middleware = "0.2.2"
tokio = { version = "1.29.1", features = [ "macros", "rt", "rt-multi-thread" ] }
wiremock = "0.5.19"

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
