[package]
name = "http-cache-mokadeser"
version = "0.3.1"
description = "http-cache manager implementation for moka stored deserialized"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "moka"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.81.0"

[dependencies]
async-trait = "0.1.85"
http-cache-semantics = "2.1.0"
moka = { version = "0.12.10", features = ["future"]}

[dependencies.http-cache]
path = "../http-cache"
version = "0.20.1"
default-features = false
features = ["bincode"]

[dev-dependencies]
http = "1.2.0"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.4.0"
tokio = { version = "1.43.0", features = [ "macros", "rt", "rt-multi-thread" ] }
url = { version = "2.5.4", features = ["serde"] }
wiremock = "0.6.2"

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
