[package]
name = "http-cache-quickcache"
version = "0.6.3"
description = "http-cache manager implementation for quick-cache"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "quick-cache"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.67.1"

[dependencies]
async-trait = "0.1.72"
bincode = "1.3.3"
http-cache-semantics = "1.0.1"
serde = { version = "1.0.178", features = ["derive"] }
url = { version = "2.4.0", features = ["serde"] }
quick_cache = "0.4.0"

[dependencies.http-cache]
path = "../http-cache"
version = "0.18.0"
default-features = false
features = ["bincode"]

[dev-dependencies]
http = "0.2.9"
reqwest = { version = "0.12.2", default-features = false }
reqwest-middleware = "0.2.2"
tokio = { version = "1.29.1", features = [ "macros", "rt", "rt-multi-thread" ] }
wiremock = "0.5.19"

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
