[package]
name = "http-cache-quickcache"
version = "0.9.0"
description = "http-cache manager implementation for quick-cache"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "quick-cache"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"

[dependencies]
async-trait = "0.1.85"
bincode = "1.3.3"
http-cache-semantics = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
quick_cache = "0.6.9"

[dependencies.http-cache]
path = "../http-cache"
version = "0.21.0"
default-features = false
features = ["bincode"]

[dev-dependencies]
http = "1.2.0"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.4.0"
tokio = { version = "1.43.0", features = [ "macros", "rt", "rt-multi-thread" ] }
wiremock = "0.6.2"

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
