[package]
name = "http-cache-quickcache"
version = "1.0.0-alpha.4"
description = "http-cache manager implementation for quick-cache"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "manager", "quick-cache"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.85.0"

[dependencies]
async-trait = "0.1.85"
bincode = "1.3.3"
http-cache-semantics = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
quick_cache = "0.6.9"
http = "1.2.0"

[dependencies.http-cache]
path = "../http-cache"
version = "1.0.0-alpha.4"
default-features = false
features = ["bincode"]

[dev-dependencies]
http = "1.2.0"
reqwest = { version = "0.13.1", default-features = false }
reqwest-middleware = "0.5.0"
tokio = { version = "1.43.0", features = [ "macros", "rt", "rt-multi-thread" ] }
macro_rules_attribute = "0.2.0"
smol-macros = "0.1.1"
wiremock = "0.6.2"
bytes = "1.8.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
futures = "0.3.31"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tower-service = "0.3.3"
hyper = "1.5.1"

[dev-dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
