[package]
name = "http-cache-reqwest"
version = "0.13.0"
description = "http-cache middleware implementation for reqwest"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "reqwest"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
http = "0.2.9"
http-cache-semantics = "1.0.1"
reqwest = { version = "0.12.1", default-features = false }
reqwest-middleware = "0.2.2"
serde = { version = "1.0.178", features = ["derive"] }
task-local-extensions = "0.1.4"
url = { version = "2.4.0", features = ["serde"] }

[dependencies.http-cache]
path = "../http-cache"
version = "0.18.0"
default-features = false

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.5.19"

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache", "http-cache/cacache-tokio"]
manager-moka = ["http-cache/manager-moka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
