[package]
name = "http-cache-reqwest"
version = "0.16.0"
description = "http-cache middleware implementation for reqwest"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "reqwest"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.82.0"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
http = "1.2.0"
http-cache-semantics = "2.1.0"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }

[dependencies.http-cache]
path = "../http-cache"
version = "0.21.0"
default-features = false

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache", "http-cache/cacache-tokio"]
manager-moka = ["http-cache/manager-moka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
