[package]
name = "http-cache-reqwest"
version = "1.0.0-alpha.2"
description = "http-cache middleware implementation for reqwest"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "reqwest"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.83.0"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
bytes = "1.8.0"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
http-cache-semantics = "2.1.0"
reqwest = { version = "0.12.12", default-features = false }
reqwest-middleware = "0.4.0"
url = { version = "2.5.4", features = ["serde"] }

# Optional dependencies for streaming feature
futures-util = { version = "0.3.31", optional = true }

[dependencies.http-cache]
path = "../http-cache"
version = "1.0.0-alpha.2"
default-features = false

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.0"
tempfile = "3.13.0"
bytes = "1.8.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
futures = "0.3.31"
futures-util = "0.3.31"

[[example]]
name = "streaming_memory_profile"
required-features = ["streaming"]

[[example]]
name = "reqwest_basic"
required-features = ["manager-cacache"]

[[example]]
name = "reqwest_streaming"
required-features = ["streaming"]

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache", "http-cache/cacache-tokio"]
manager-moka = ["http-cache/manager-moka"]
streaming = ["http-cache/streaming-tokio", "reqwest/stream", "futures-util"]
rate-limiting = ["http-cache/rate-limiting"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
