[package]
name = "http-cache-surf"
version = "0.7.0"
description = "http-cache middleware implementation for surf"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "surf"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
http = "0.2.8"
http-cache-semantics = "1.0.1"
http-types = "2.12.0"
serde = { version = "1.0.152", features = ["derive"] }
surf = "2.3.2"
url = { version = "2.3.1", features = ["serde"] }

[dependencies.http-cache]
path = "../http-cache"
version = "0.9.0"
features = ["with-http-types"]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache"]
manager-moka = ["http-cache/manager-moka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
