[package]
name = "http-cache-surf"
version = "0.12.1"
description = "http-cache middleware implementation for surf"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "surf"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
http = "0.2.9"
http-cache-semantics = "1.0.1"
http-types = "2.12.0"
serde = { version = "1.0.178", features = ["derive"] }
surf = { version = "2.3.2", default-features = false }
url = { version = "2.4.0", features = ["serde"] }
thiserror = "1.0.44"

[dependencies.http-cache]
path = "../http-cache"
version = "0.18.0"
default-features = false
features = ["with-http-types"]

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
surf = { version = "2.3.2", features = ["curl-client"] }
wiremock = "0.6.0"

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache", "http-cache/cacache-async-std"]
manager-moka = ["http-cache/manager-moka"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
