[package]
name = "http-cache-surf"
version = "1.0.0-alpha.4"
description = "http-cache middleware implementation for surf"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "surf"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.85.0"

[dependencies]
async-trait = "0.1.85"
http = "1.2.0"
http-cache-semantics = "2.1.0"
http-types = "2.12.0"
surf = { version = "2.3.2", default-features = false }
url = { version = "2.5.4", features = ["serde"] }

[dependencies.http-cache]
path = "../http-cache"
version = "1.0.0-alpha.4"
default-features = false
features = ["with-http-types"]

[dev-dependencies]
surf = { version = "2.3.2", features = ["curl-client"] }
wiremock = "0.6.2"
tempfile = "3.13.0"
macro_rules_attribute = "0.2.0"
smol-macros = "0.1.1"
tokio = { version = "1.46", features = ["net", "rt", "macros"] }

[[example]]
name = "surf_basic"
required-features = ["manager-cacache"]

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache", "http-cache/cacache-smol"]
manager-moka = ["http-cache/manager-moka"]
rate-limiting = ["http-cache/rate-limiting"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
