[package]
name = "http-cache-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
cacache = "11.6.0"
http = "0.2.9"
http-cache-semantics = "1.0.1"
http-types = "2.12.0"
reqwest = "0.11.18"
reqwest-middleware = "0.2.2"
surf = "2.3.2"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
url = "2.4.0"
wiremock = "0.5.18"

[dependencies.http-cache]
path = "../http-cache"
version = "0.12.0"
features = ["with-http-types", "manager-moka"]

[dependencies.http-cache-reqwest]
path = "../http-cache-reqwest"
version = "0.10.0"

[dependencies.http-cache-surf]
path = "../http-cache-surf"
version = "0.10.0"

[dependencies.http-cache-quickcache]
path = "../http-cache-quickcache"
version = "0.4.0"
