[package]
name = "http-cache-tower-server"
version = "0.2.1"
description = "Server-side HTTP response caching middleware for Tower/Axum"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "tower", "server"]
categories = [
    "caching",
    "web-programming::http-server"
]
edition = "2021"
rust-version = "1.85.0"

[dependencies]
http-cache = { version = "1.0.0-alpha.4", path = "../http-cache", default-features = false }
http-cache-semantics = "2.1.0"
tower = { version = "0.5.2", features = ["util"] }
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
bytes = "1.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["time"] }
async-trait = "0.1.85"
httpdate = "1.0.3"

[dev-dependencies]
tokio = { version = "1.43.0", features = [ "macros", "rt", "rt-multi-thread", "time" ] }
tokio-test = "0.4.4"
tower-test = "0.4.0"
http-body-util = "0.1.2"
tempfile = "3.13.0"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
axum = "0.8.7"
async-trait = "0.1.85"

[[example]]
name = "axum_basic"
required-features = ["manager-cacache"]

[[example]]
name = "axum_advanced"
required-features = ["manager-cacache"]

[features]
default = ["manager-cacache"]
manager-cacache = ["http-cache/manager-cacache"]
manager-moka = ["http-cache/manager-moka"]
manager-foyer = ["http-cache/manager-foyer"]
