[package]
name = "http-cache-ureq"
version = "1.0.0-alpha.4"
description = "http-cache middleware implementation for ureq"
authors = ["Christian Haynes <06chaynes@gmail.com>", "Kat Marchán <kzm@zkat.tech>"]
repository = "https://github.com/06chaynes/http-cache"
homepage = "https://http-cache.rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cache", "http", "middleware", "ureq"]
categories = [
    "caching",
    "web-programming::http-client"
]
edition = "2021"
rust-version = "1.85.0"

[dependencies]
async-trait = "0.1.85"
http = "1.2.0"
http-cache-semantics = "2.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
smol = "2.0.2"
ureq = { version = "3.1.0" }

[dependencies.http-cache]
path = "../http-cache"
version = "1.0.0-alpha.4"
default-features = false

[dev-dependencies]
macro_rules_attribute = "0.2.0"
smol-macros = "0.1.1"
tempfile = "3.13.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "net"] }
wiremock = "0.6.0"

[[example]]
name = "ureq_basic"
required-features = ["manager-cacache"]


[features]
default = ["manager-cacache", "url-standard"]
manager-cacache = ["http-cache/manager-cacache"]
manager-moka = ["http-cache/manager-moka"]
manager-foyer = ["http-cache/manager-foyer"]
json = ["dep:serde_json", "ureq/json"]
rate-limiting = ["http-cache/rate-limiting"]
url-standard = ["http-cache/url-standard"]
url-ada = ["http-cache/url-ada"]
http-headers-compat = ["http-cache/http-headers-compat"]
manager-cacache-bincode = ["http-cache/manager-cacache-bincode"]
manager-moka-bincode = ["http-cache/manager-moka-bincode"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]